--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ async function init() {
         cyl["count"] = 0
         cyl["HwyMPG"] = 0
         cyl["CityMPG"] = 0
-        dict[item] = Cyl
+        dict[item] = cyl
     });
 
     // Populate dictionary with number of cars with that number cylinder, avg highwaympg for that cylinder, and avg city mpg for that cylinder
