--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ async function init() {
     }
     
     cylinders.forEach(function (item,index) {
-        dict[item]["HwyMPG"] = (dict[item]["HwyMPG"] / dict[item]["count"]).toFixed(2)
-        dict[item]["CityMPG"] = (dict[item]["CityMPG"] / dict[item]["count"]).toFixed(2)
+        dict[item]["avgHighMPG"] = (dict[item]["avgHighMPG"] / dict[item]["count"]).toFixed(2)
+        dict[item]["avgCityMPG"] = (dict[item]["avgCityMPG"] / dict[item]["count"]).toFixed(2)
     });
     
     console.log(dict)
