--- a/index.html
+++ b/index.html
@@ -1,36 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-//<script src="https://d3js.org/d3.v7.min.js"></script>
-    <div class="chart"></div>
-<script src="https://d3js.org/d3.v7.min.js"  charset="utf-8"></script>
-<script>
-var data = [4, 8, 15, 16, 23, 42];
-
-var x = d3.scale.linear()
-.domain([0, d3.max(data)])
-.range([0, 420]);
-
-d3.select(".chart")
-.selectAll("div")
-.data(data)
-.enter().append("div")
-.style("width", function(d) { return x(d) + "px"; })
-.text(function(d) { return d; });
-</script>
-<style>.chart div {
-    font: 10px sans-serif;
-    background-color: steelblue;
-    text-align: right;
-    padding: 3px;
-    margin: 1px;
-    color: white;
-}
-
-body {
-  background: white;
-  color: black;
-}
-</style>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
 <head>
     <meta charset="UTF-8">
