--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ async function init() {
         himpg = Number(data[i].AverageHighwayMPG)
         cimpg = Number(data[i].AverageCityMPG)
 
-        //dict[c]["count"] += 1 
+        dict[c]["count"] += 1 
         dict[c]["avgHighMPG"] += himpg
         dict[c]["avgCityMPG"] += cimpg
          
