--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <script>
 async function init() {
 
-    const data = d3.csv("cars2023.csv");
+    const data = await d3.csv("cars2023.csv");
     const cylinders = [0,2,3,4,6,8,10,12]
     
     // Setup dictionary for the different cylinder numbers of each car
