--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
         <h1>US consumer complaits are on the rise, according to FTC</h1>
-        <p>In the past few years, consumer complaints in the US are on the rise, according to FTC’s Consumer Financial Protection Bureau Consumer Complaint Database. In 2021, there are more than 5 million complaints cross the US, which was almost more than trippled compared to 2007.</p>
+        <p>A new survey shows Americans are experiencing more product and service problems than ever before. According to FTC’s Consumer Financial Protection Bureau Consumer Complaint Database as well In the past few y,ears, consumer complaints in the US are on the rise. In 2021, there are more than 5 million complaints cross the US, which was almost more than trippled compared to 2007.</p>
         <p class="hed">Graphic: all type of complaits grows steadily since 2001<p>
         <form id="form" class="btn-group btn-group-toggle" data-toggle="buttons">
           <label class="btn btn-secondary active">
