--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>416 Final</title>
+    <title>CS416-Narrative Visualization</title>
     <link rel="stylesheet" href="./viz.css">
   </head>
   <body>
     <main>
         <h1>Consumer Complaints Data from FTC in USA </h1>
         <p>A new survey shows Americans are experiencing more product and service problems than ever before. According to FTC’s Consumer Financial Protection Bureau Consumer Complaint Database as well In the past few y,ears, consumer complaints in the US are on the rise. In 2021, there are more than 5 million complaints cross the US, which was almost more than trippled compared to 2007.</p>
-        <p class="hed">Graphic: all type of complaits grows steadily since 2001<p>
+        <p class="hed">Graphic: all type of complaits grows steadily since 2003<p>
         <form id="form" class="btn-group btn-group-toggle" data-toggle="buttons">
           <label class="btn btn-secondary active">
             <input type="radio" name="controlSlide" value="data1" checked>1<br>
